Fixed failing tests & weird alignment issues.

--- a/app/assets/stylesheets/user_show.css
+++ b/app/assets/stylesheets/user_show.css
@@ -1,10 +1,12 @@
 .book-review-row {
     display: flex;
     align-items: center;
+    width: 100%;
 }
 
 .book-review-row .summary-block{
     margin-right: 20px;
+    margin-left: 0;
 }
 
 .review-sort{
@@ -30,4 +32,18 @@
 .review-sort #left-link{
     margin-left: auto;
     margin-right: 20px;
+}
+
+.delete-review{
+    margin-top: 15px;
+}
+
+.delete-review a{
+    font-size: small;
+    color: #909090;
+    text-decoration: none;
+}
+
+.delete-review a:hover{
+    color: #444444;
 }
